# esp-template

./: Cargo.toml  flake.nix
.cargo/: config.toml
.helix/: languages.toml
src/: main.rs
